# kcchat-server

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
doc/: config.json.sample  initial.sql
src/: chatcommands.cpp  chatserver.cpp  chatserver.h  main.cpp  overlaydispatch.cpp  overlaydispatch.h  overlaymessage.cpp  overlaymessage.h  startupconfig.cpp  startupconfig.h  usersocketmap.cpp  usersocketmap.h  util.cpp  util.h
src/auth/: authlevel.h  authmodule.cpp  authmodule.h  googleauth.cpp  googleauth.h
